test.log
[1m[92m    Updating[0m crates.io index
[1m[92m     Locking[0m 47 packages to latest compatible versions
[1m[92m      Adding[0m generic-array v0.14.7 [1m[33m(available: v0.14.9)[0m
[1m[92m      Adding[0m rand v0.8.5 [1m[33m(available: v0.10.0)[0m
[1m[92m      Adding[0m rand_chacha v0.3.1 [1m[33m(available: v0.10.0)[0m
[1m[92m      Adding[0m thiserror v1.0.69 [1m[33m(available: v2.0.18)[0m
[1m[92m   Compiling[0m waecan-node v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-node)
[1m[92m   Compiling[0m waecan-crypto v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-crypto)
[1m[92m   Compiling[0m waecan-wallet v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-wallet)
[1m[92m   Compiling[0m waecan-miner v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-miner)
[1m[92m   Compiling[0m waecan-rpc v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-rpc)
[1m[92m   Compiling[0m waecan-cli v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-cli)
[1m[92m   Compiling[0m waecan-p2p v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-p2p)
[1m[92m   Compiling[0m waecan-storage v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-storage)
[1m[92m   Compiling[0m waecan-mempool v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-mempool)
[1m[92m   Compiling[0m waecan-core v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-core)
[1m[91merror[E0432][0m[1m: unresolved import `rand`[0m
   [1m[94m--> [0mcrates/waecan-core/src/validation.rs:107:9
    [1m[94m|[0m
[1m[94m107[0m [1m[94m|[0m     use rand::SeedableRng;
    [1m[94m|[0m         [1m[91m^^^^[0m [1m[91muse of unresolved module or unlinked crate `rand`[0m
    [1m[94m|[0m
    [1m[94m= [0m[1mhelp[0m: if you wanted to use a crate named `rand`, use `cargo add rand` to add it to your `Cargo.toml`

[1m[91merror[E0432][0m[1m: unresolved import `rand_chacha`[0m
   [1m[94m--> [0mcrates/waecan-core/src/validation.rs:108:9
    [1m[94m|[0m
[1m[94m108[0m [1m[94m|[0m     use rand_chacha::ChaCha20Rng;
    [1m[94m|[0m         [1m[91m^^^^^^^^^^^[0m [1m[91muse of unresolved module or unlinked crate `rand_chacha`[0m
    [1m[94m|[0m
    [1m[94m= [0m[1mhelp[0m: if you wanted to use a crate named `rand_chacha`, use `cargo add rand_chacha` to add it to your `Cargo.toml`

[1m[91merror[E0433][0m[1m: failed to resolve: use of unresolved module or unlinked crate `rand`[0m
   [1m[94m--> [0mcrates/waecan-core/src/validation.rs:115:9
    [1m[94m|[0m
[1m[94m115[0m [1m[94m|[0m         rand::RngCore::fill_bytes(&mut rng, &mut spend_bytes);
    [1m[94m|[0m         [1m[91m^^^^[0m [1m[91muse of unresolved module or unlinked crate `rand`[0m
    [1m[94m|[0m
    [1m[94m= [0m[1mhelp[0m: if you wanted to use a crate named `rand`, use `cargo add rand` to add it to your `Cargo.toml`

[1m[33mwarning[0m[1m: unused import: `curve25519_dalek::scalar::Scalar`[0m
   [1m[94m--> [0mcrates/waecan-core/src/validation.rs:106:9
    [1m[94m|[0m
[1m[94m106[0m [1m[94m|[0m     use curve25519_dalek::scalar::Scalar;
    [1m[94m|[0m         [1m[33m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m
    [1m[94m|[0m
    [1m[94m= [0m[1mnote[0m: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

[1m[91merror[E0560][0m[1m: struct `RingMember` has no field named `key_image`[0m
   [1m[94m--> [0mcrates/waecan-core/src/validation.rs:132:17
    [1m[94m|[0m
[1m[94m132[0m [1m[94m|[0m                 key_image: None,
    [1m[94m|[0m                 [1m[91m^^^^^^^^^[0m [1m[91m`RingMember` does not have this field[0m
    [1m[94m|[0m
    [1m[94m= [0m[1mnote[0m: all struct fields are already assigned

[1m[91merror[E0560][0m[1m: struct `RingMember` has no field named `key_image`[0m
   [1m[94m--> [0mcrates/waecan-core/src/validation.rs:139:17
    [1m[94m|[0m
[1m[94m139[0m [1m[94m|[0m                 key_image: Some(
    [1m[94m|[0m                 [1m[91m^^^^^^^^^[0m [1m[91m`RingMember` does not have this field[0m
    [1m[94m|[0m
    [1m[94m= [0m[1mnote[0m: all struct fields are already assigned

[1m[91merror[E0308][0m[1m: mismatched types[0m
   [1m[94m--> [0mcrates/waecan-core/src/validation.rs:153:13
    [1m[94m|[0m
[1m[94m153[0m [1m[94m|[0m             ring_sig,
    [1m[94m|[0m             [1m[91m^^^^^^^^[0m [1m[91mexpected `RingSignature`, found `Result<RingSignature, CryptoError>`[0m
    [1m[94m|[0m
    [1m[94m= [0m[1mnote[0m: expected struct `RingSignature`
                 found enum `[1m[35mResult[0m[1m[35m<[0mRingSignature, [1m[35mCryptoError[0m[1m[35m>[0m`
[1m[96mhelp[0m: consider using `Result::expect` to unwrap the `Result<RingSignature, CryptoError>` value, panicking if the value is a `Result::Err`
    [1m[94m|[0m
[1m[94m153[0m [1m[94m| [0m            ring_sig[92m: ring_sig.expect("REASON")[0m,
    [1m[94m|[0m                     [92m+++++++++++++++++++++++++++[0m

[1mSome errors have detailed explanations: E0308, E0432, E0433, E0560.[0m
[1mFor more information about an error, try `rustc --explain E0308`.[0m
[1m[33mwarning[0m: `waecan-core` (lib test) generated 1 warning
[1m[91merror[0m: could not compile `waecan-core` (lib test) due to 6 previous errors; 1 warning emitted
[1m[33mwarning[0m: build failed, waiting for other jobs to finish...
